2008-01-18  Matthieu Nottale  <nottale@gostai.com>

	Remove ChangeLog.
	* ChangeLog: Remove.

2008-01-18  Matthieu Nottale  <nottale@gostai.com>

	Temporary hack so that void_class.print displays nothing.
	* src/object/object.cc: Here, until the C++ code can call the Urbi
	  print.

2008-01-18  Matthieu Nottale  <nottale@gostai.com>

	Implement a void type.
	void is a singleton. It cannot be used as argument in a function
	call (all operators are function call). It should not print itself.
	* share/urbi/urbi.u: Implement void.clone and void.print. The latter
	  has no effect on C++ code as it does not getSlot("print") but uses
	  Object::print
	* src/object/fwd.hh: Declare rObject void_class.
	* src/object/object-class.cc: wait returns void instead of self.
	* src/object/primitives.cc: Define void_class, setSlot it in
	  object_class.
	* src/object/urbi-exception.hh: New ctor for WrongArgumentType for
	  an "invalid void" exception.
	* src/object/urbi-exception.hxx: Here too.
	* src/runner/runner.cc: 
	  - Initialize ast:Nary _current to void_class,
	     so that {} evaluates to void.
	  - throw an exception if a call argument is void_class.

2008-01-18  Matthieu Nottale  <nottale@gostai.com>

	Change runner to take its locals as ctor argument instead of creating it.
	* src/runner/runner.hxx: Here.
	* src/uconnection.cc: Pass lobby_ as locals when creating a Runner.

2008-01-17  Samuel Tardieu  <tardieu@gostai.com>

	Constants cleanup.
	* share/urbi/urbi.u: Move "pi" and "inf" there. Put constants in
	Lobby.
	* src/parser/utoken.l: Remove special-cased constants.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Fix dump.
	* src/object/object-class.cc: Do not initialize a std::string with 0.

2008-01-16  Samuel Tardieu  <tardieu@gostai.com>

	Notes on closures and at expansion.
	* doc/semantics-issues.org: New notes.

2008-01-16  Loic Fosse  <fosse@gostai.com>

	Test 1.x/string-escapes.chk does not fail anymore.