@@ -1,5 +1,11 @@
 2008-01-18  Matthieu Nottale  <nottale@gostai.com>
 
+	Add interactive mode to kernel.
+	* libport: Update submodule.
+	* src/console-server.cc: Define and implement interactive option.
+
+2008-01-18  Matthieu Nottale  <nottale@gostai.com>
+
 	Remove ChangeLog.
 	* ChangeLog: Remove.
 
